fix: remove gaps from list elements

--- a/src/styles/foundation/type__lists.sass
+++ b/src/styles/foundation/type__lists.sass
@@ -5,8 +5,6 @@
 ol,
 ul,
 dl
-	display: grid
-	gap: 8px
 	margin-top: 0
 	padding-left: 32px
 	&:last-child
